# YouTube-Shorts-Insights-API

./: .gitignore  database.db  items.db  pyproject.toml  requirements.txt
app/: database.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py  main.py
app/core/: security.py
app/crud/: item.py
app/models/: analysis_cache.py  item.py  shorts.py  sync_log.py  user.py
app/routers/: auth.py  item.py  youtube.py  youtube_debug.py
app/schemas/: item.py  shorts.py  user.py
app/services/: cache_service.py  sync_service.py  youtube_service.py
